fixed issue with arrow being out of place because of transform being declared in two places

--- a/css/animations.css
+++ b/css/animations.css
@@ -43,7 +43,7 @@
 }
 
 @keyframes arrowDown {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
-    100% { transform: translateY(0); }
+    0% { transform: translate(-50%, 0px); }
+    50% { transform: translate(-50%, -10px); }
+    100% { transform: translate(-50%, 0px); }
 }
