--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,6 @@ body {
     position: absolute;
     left: 50%;
     bottom: 3vh;
-    transform: translateX(-50%);
 
     width: 64px;
     height: 32px;
